Disable twitter, cleanup